--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.21.1",
-    "react-scripts": "^4.0.3"
+    "react-scripts": "^4.0.3",
+    "react-toastify": "^9.1.3"
   },
   "scripts": {
     "start": "react-scripts --openssl-legacy-provider start",
