--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@preact/signals-react": "^2.0.0",
     "axios": "^1.6.2",
+    "preact": "^10.19.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.21.1",
