--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.2",
-    "pg": "^8.11.3"
+    "pg": "^8.11.3",
+    "preact": "^10.19.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
